# hf-hub-v1-migrator

./: .gitignore  PUBLISHING.md  README.md  SUBMISSION.md  codemod.yaml  pyproject.toml  workflow.yaml
examples/demo_repo/: model_download.py  push_model.py
hf-hub-v1-migrator/: .env.example  .gitignore  README.md  codemod.yaml
hf-hub-v1-migrator/src/hf_hub_v1_migrator/: report.py  transformer.py
scripts/: benchmark_coverage.py  demo.ps1  record_demo.ps1
src/hf_hub_v1_migrator/: __init__.py  ai_reviewer.py  cli.py  report.py  transformer.py
tests/: test_transformer.py
tests/fixtures/async_inference_trust_env/: after.py  before.py
tests/fixtures/build_hf_headers_is_write_action/: after.py  before.py
tests/fixtures/cached_download_hf_url/: after.py  before.py
tests/fixtures/cached_download_kwargs_report_only/: before.py
tests/fixtures/cached_download_report_only/: before.py
tests/fixtures/cached_download_submodule_hf_url/: after.py  before.py
tests/fixtures/constants_hf_cache_home/: after.py  before.py
tests/fixtures/constants_hf_cache_home_direct_import/: after.py  before.py
tests/fixtures/dynamic_kwargs_report_only/: before.py
tests/fixtures/get_token_permission_report_only/: before.py
tests/fixtures/hfapi_instance_methods/: after.py  before.py
tests/fixtures/hffolder_get_token/: after.py
tests/fixtures/hffolder_instance_get_token/: after.py  before.py
tests/fixtures/http_error_exception/: after.py
tests/fixtures/inference_api/: before.py
tests/fixtures/list_models_combined_review_only/: before.py
(+15 files in other folders)
